@@ -130,6 +130,20 @@
      <td VALIGN=TOP><b><font size=+1>History</font></b></td>
      <td>
 	<ul>
+	<li>21 October 2001
+	<ul>
+		<li>features
+		<ul>
+			<li>show grid if show grid option is enabled</li>
+		</ul>
+		</li>
+		<li>bug fixes
+		<ul>
+			<li>the x parameter for text was wrong</li>
+		</ul>
+		</li>
+	</ul>
+	</li>
 	<li>20 October 2001
 	<ul>
 		<li>features
@@ -209,9 +223,11 @@
 <tr><td></td>			<td>Unit</td>			<td>IGNORED</td></tr>
 
 <tr><td>GRID</td>		<td></td>			<td></td></tr>
-<tr><td></td>			<td>dx</td>			<td>ANALYSED</td></tr>
-<tr><td></td>			<td>dy</td>			<td>ANALYSED</td></tr>
-<tr><td></td>			<td>Align</td>			<td>SUPPORTED</td></tr>
+<tr><td></td>			<td>dx</td>			<td>SUPPORTED</td></tr>
+<tr><td></td>			<td>dy</td>			<td>SUPPORTED</td></tr>
+<tr><td></td>			<td>show</td>			<td>SUPPORTED</td></tr>
+<tr><td></td>			<td>align</td>			<td>UNUSEFULL</td></tr>
+<tr><td></td>			<td>Help</td>			<td>UNUSEFULL</td></tr>
 
 <tr><td colspan="2"><b><i>LAYER</i></b></td></tr>
 <tr><td>RECTANGLE</td>		<td></td>			<td></td></tr>
@@ -226,6 +242,7 @@
 <tr><td>POLYGONE</td>		<td></td>			<td></td></tr>
 <tr><td>BEZIER</td>		<td></td>			<td></td></tr>
 <tr><td>TEXT</td>		<td>ALL except font (helvetica, ...)</td>
+<tr><td>PATH</td>		<td>UNSUPPORTED</td>			<td></td></tr>
 
 <tr><td colspan="3"><b><i>ALL OTHER ARE IGNORED</i></b></td></tr>
 </table>
